tests/fixtures/invalid/ref_cycle/node.etcm
spec Node:
  child: Node

impl a:
  $child: node.etcm#b

impl b:
  $child: node.etcm#a
